--- a/Detector.Web/Views/Home/Index.cshtml
+++ b/Detector.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<IntrudeRecordEntity>
 
 <div class="text-center">
-    <h1 class="display-4">入侵紀錄</h1>
+    <h4 class="mb-4">入侵紀錄</h4>
 </div>
 
 <div>
