[Web] 修正輪詢秒數

--- a/Detector.Web/Views/Home/Index.cshtml
+++ b/Detector.Web/Views/Home/Index.cshtml
@@ -5,11 +5,11 @@
 </div>
 
 <div>
-    <table class="table table-dark">
+    <table class="table table-dark small">
         <thead>
             <tr>
                 <th>#</th>
-                <th>入侵時間</th>
+                <th>入侵時間(UTC)</th>
             </tr>
         </thead>
         <tbody>
