[Web] 修改欄位名稱

--- a/Detector.Web/Views/Home/Index.cshtml
+++ b/Detector.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<IntrudeRecordEntity>
 
 <div class="text-center">
-    <h4 class="mb-4">入侵紀錄</h4>
+    <h4 class="mb-4">Intrude Record</h4>
 </div>
 
 <div>
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>入侵時間(UTC)</th>
+                <th>Time (UTC)</th>
             </tr>
         </thead>
         <tbody>
